update release notes

--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,12 @@
       %i.icon.icon-passmaster
       = I18n.t('updates.title')
 
+    %h4.update-date 2024-11-05
+    %ul
+      %li New app icon. (Thanks Khushnood Qadir!)
+      %li Added '/' keyboard shortcut to focus the search box.
+      %li Improved 'tap to copy' behavior on Android browsers.
+
     %h4.update-date 2024-02-20
     %ul
       %li Added internationalization support with support for Vietnamese.
